[package]
name = "beamng-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
ws_stream_wasm = "0.7.4"
futures-util = "0.3.26"
serde_json = "1.0.93"
serde = { version="1.0.152", features = ["derive"] }
beamng-types = { path = "../beamng-types", version = "0.1.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
