[package]
name = "beamng-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3.55", features = ["websocket", "static-files"]}
serde_json = "1.0.93"
serde = { version="1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.26"
dotenv = "0.15.0"
anyhow = "1.0.69"
beamng-types = { path = "../beamng-types", version = "0.1.0" }
uuid = { version = "1.2.2", features = ["v4"] }
ureq = "2.6.2"
async-process = "1.6.0"
async_zip = { version = "0.0.15", features = ["full"] }
regex="1.9.1"
toml = "0.7.6"
